# pattern-discovery-agent

./: .env.example  .gitignore  README.md  agent.py  agent.yaml  pyproject.toml  requirements.txt
docs/: PATTERN_DISCOVERY_AGENT_ARCHITECTURE.md  PATTERN_DISCOVERY_IMPLEMENTATION_PART1.md  PATTERN_DISCOVERY_IMPLEMENTATION_PART2.md  TESTING_AND_RESULTS.md
fixtures/: sample_arxiv_response.xml  sample_assertions.json  sample_openalex_response.json  sample_semantic_scholar_response.json
scripts/: run_evaluation.py
src/: __init__.py  checkpoint.py  domain_pack.py  pack_registry.py
src/core/: graph.py  report.py  types.py  verifier.py
src/core/patterns/: __init__.py  bridges.py  contradictions.py  dedup.py  drift.py  gaps.py
src/packs/research/: __init__.py  interpret_format.py  interpret_llm.py  router.py  schema.py
src/packs/research/connectors/: __init__.py  arxiv.py  github.py  openalex.py  semantic_scholar.py  web_search.py
src/shared/: corpus.py  embeddings.py  extraction.py
tests/core/: test_bridges.py  test_contradiction_dedup.py  test_contradictions.py  test_drift.py  test_gaps.py  test_graph.py  test_pack_registry.py  test_report.py  test_types.py  test_verifier.py
tests/integration/: test_full_pipeline.py
tests/packs/research/: test_arxiv_https.py  test_connectors.py  test_connectors_live.py  test_interpret_format.py  test_router_queries.py  test_schema.py
tests/quality/: test_output_quality.py
tests/shared/: test_checkpoint.py  test_corpus.py  test_corpus_relevance.py  test_embeddings.py  test_extraction.py
