[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-discovery"
version = "0.1.0"
description = "Domain-agnostic pattern discovery agent (RunForge)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-runtime>=0.0.1",
    "httpx>=0.27.0",
    "networkx>=3.3",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "hdbscan>=0.8.38",
    "numpy>=1.26.0",
    "anthropic>=0.40.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: downloads models or heavy compute",
    "live: real HTTP/API calls",
    "integration: full pipeline",
    "quality: needs eval_output from scripts/run_evaluation.py",
]
